<resources>
    <string name="app_name">Wildcard Willies</string>
    <string name="_1_player_game">1 Player Start</string>
    <string name="inhaltuniversalbutton">Next</string>
    <string name="itemname">ich bin ein ganz langer Artikelname</string>
    <string name="itemprice">***.**</string>
    <string name="p1Name">Schmal-Lars</string>
    <string name="p1Score">17</string>
    <string name="p2Name">Florentin</string>
    <string name="p2Score">17</string>
    <string name="p1Price">10.50</string>
    <string name="euro">€</string>
    <string name="eur">EUR</string>
    <string name="p2Price">08.15</string>
    <string name="winnerHeadline">Winner:</string>
    <string name="winnerPlayerName">Lars</string>
    <string name="winnerScore">117</string>
    <string name="loserPlayerName">Florentin</string>
    <string name="loserPlayerScore">0</string>
    <string name="loserPlayerHeadline">Loser:</string>
    <string name="enemyHeadline">Enemy:</string>
    <string name="p1DefaultName">Florentin</string>
    <string name="playerHeadline">Player</string>
    <string name="emptyPrice">-</string>
    <string name="your_guess">your guess</string>
    <string name="nextRoundText">Next Round</string>
    <string name="guessText">Guess</string>
    <string name="startGameText">Play</string>
    <string name="resultsText">Results</string>
    <string name="lastRoundText">Last Round</string>
    <string name="credits">Credits</string>
    <string name="backButton">Back</string>
    <string name="creditsText">Credits</string>
    <string name="how_to_play_Button">Options</string>
    <string name="rules">1. Choose your player name and select the difficulty by choosing an easy (Schmal-Lars),
        normal (Lars), or hard (Breit-Lars) opponent. \n
        2. Try to guess the \"original\" price as close as possible. \n
        3. Your bet was closer than the CPU\'s? Bravo, you earned 1 point. Guess the price correctly to earn the price in
        points (up to 1000)! \n
        4. You and Lars take turns guessing first. \n
        5. Collect more points than your opponent in a game of 5 rounds, or extend to a 15 round marathon.</string>
    <string-array name="larses">
        <item>Schmal-Lars</item>
        <item>Lars</item>
        <item>Breit-Lars</item>
    </string-array>
</resources>
