<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/colorPrimaryDark">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:id="@+id/platzhalter"
            android:background="@color/colorPrimary"
            android:contentDescription="TODO"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline03"
            app:layout_constraintGuide_percent="0.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/inhaltuniversalbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:layout_marginBottom="16dp"
            android:id="@+id/universalButton"
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textAllCaps="true"
            android:backgroundTint="@color/colorAccent"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/itemname"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemImage"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/itemName"
            android:textSize="18sp"
    android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:text="@string/itemprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/itemName"
            app:layout_constraintStart_toEndOf="@id/itemPriceCurr"
            android:layout_marginStart="16dp"
            android:id="@+id/itemPrice"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:text="@string/eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/itemName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/itemPriceCurr"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toTopOf="@id/guideline03"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/itemImage"
            app:srcCompat="@drawable/a0001"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/p2Box"
            android:id="@+id/p1Box" android:background="@color/colorAccent"/>

    <TextView
            android:text="@string/p1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/p1Box"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/p1Box"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/p1Name"/>

    <TextView
            android:text="@string/p1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/p1Name"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/p1Box"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/p1Score"/>
    <TextView
            android:text="@string/p1Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/p1Box"
            app:layout_constraintStart_toStartOf="@id/p1Box"
            app:layout_constraintEnd_toStartOf="@id/p1PriceCurr"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="2dp"
            android:id="@+id/p1Price"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="right"/>
    <TextView
            android:text="@string/euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/p1Box"
            app:layout_constraintStart_toEndOf="@id/p1Price"
            app:layout_constraintEnd_toEndOf="@id/p1Box"
            android:layout_marginEnd="16dp"
            android:id="@+id/p1PriceCurr"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toEndOf="@id/p1Box"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@color/colorPrimaryDark"
            android:id="@+id/p2Box"/>

    <TextView
            android:text="@string/p2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/p2Box"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/p2Box"
            android:id="@+id/p2Name"
            android:textColor="@color/colorPrimary"/>

    <TextView
            android:text="@string/p2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/p2Name"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/p2Box"
            android:id="@+id/p2Score"
            android:textColor="@color/colorPrimary"/>

    <TextView
            android:text="@string/p2Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/p2Box"
            app:layout_constraintStart_toStartOf="@id/p2Box"
            app:layout_constraintEnd_toStartOf="@id/p2PriceCurr"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="2dp"
            android:id="@+id/p2Price"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:gravity="right"/>
    <TextView
            android:text="@string/euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/p2Box"
            app:layout_constraintStart_toEndOf="@id/p2Price"
            app:layout_constraintEnd_toEndOf="@id/p2Box"
            android:layout_marginEnd="16dp"
            android:id="@+id/p2PriceCurr"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:text="10.50"
            android:textSize="30sp"
            android:gravity="right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/p1Box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/inputPrice"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"/>
    <TextView
            android:text="@string/euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/inputPrice"
            android:layout_marginBottom="11dp"
            app:layout_constraintStart_toEndOf="@id/inputPrice"
            android:layout_marginEnd="16dp"
            android:id="@+id/inputPriceCurr"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/your_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inputPrice"
            android:id="@+id/playerTurn"
            android:textColor="@color/colorAccent"/>

</android.support.constraint.ConstraintLayout>