<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorPrimary"
        android:id="@+id/container">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            android:id="@+id/platzhalter"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="TODO"/>
    <TextView
            android:text="@string/winnerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winnerScore"
            android:textSize="40sp"
            android:textColor="@color/colorTextDark"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/winnerPlayerName"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:gravity="center" android:fontFamily="@font/roboto_condensed_bold"/>
    <TextView
            android:text="@string/winnerHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winnerHeadline2"
            android:textSize="40sp"
            android:textColor="@color/colorTextDark"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/winnerPlayerName"
            android:gravity="center" android:fontFamily="@font/roboto_condensed_bold"/>
    <TextView
            android:text="@string/winnerPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winnerPlayerName"
            android:textSize="80sp"
            android:textColor="@color/colorTextDark"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:gravity="center"
            android:fontFamily="@font/roboto_condensed_bold"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/inhaltuniversalbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:layout_marginBottom="16dp"
            android:id="@+id/universalButton"
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textAllCaps="true"
            android:backgroundTint="@color/colorAccent"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/loserPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loserPlayerName"
            android:textSize="30sp"
            android:textColor="@color/colorText"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:fontFamily="@font/roboto_condensed_bold"/>
    <TextView
            android:text="@string/loserPlayerHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loserPlayerHeadline"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toTopOf="@id/loserPlayerName"
            android:gravity="center"
            android:fontFamily="@font/roboto_condensed_bold"/>
    <TextView
            android:text="@string/loserPlayerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loserPlayerScore"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loserPlayerName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:fontFamily="@font/roboto_condensed_bold"/>

    <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/viewKonfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
</android.support.constraint.ConstraintLayout>