<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorPrimary">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline07"
            android:layout_marginBottom="4dp"
            android:id="@+id/backgroundBox"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:id="@+id/platzhalter"
            app:srcCompat="@drawable/ww_600800_text_nobg_02"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appTitle"
            android:textSize="60sp"
            android:textColor="@color/colorTextDark"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:gravity="center" android:fontFamily="@font/roboto_condensed_bold"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/inhaltuniversalbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:layout_marginBottom="16dp"
            android:id="@+id/universalButton"
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textAllCaps="true"
            android:backgroundTint="@color/colorAccent"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/enemyHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideline07"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            android:id="@+id/enemyHeadline"
            android:textColor="@color/colorPrimaryDark"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/larsSpinner"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enemyHeadline"
            android:layout_marginStart="64dp"
            android:entries="@array/larses"
            android:textColor="@color/colorPrimary"
            android:spinnerMode="dialog"/>
            <!--android:backgroundTint="@color/colorPrimary"-->
    <TextView
            android:text="@string/playerHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/p1DefaultName"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            android:id="@+id/playerHeadline"
            android:textColor="@color/colorAccent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/p1DefaultName"
            android:ems="5"
            app:layout_constraintBottom_toTopOf="@id/guideline07"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            android:id="@+id/p1DefaultName"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline07"
            app:layout_constraintGuide_percent="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <!--    <TextView
            android:text="Developed for MiniBeansJam3 by Mephisto17Games"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10dp"
            android:id="@+id/credits"/>-->

    <Button
            android:text="@string/how_to_play_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/howToPlayButton"
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textAllCaps="true"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="16sp"/>

    <!-- Transparent layer -->
    <LinearLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:id="@+id/transparentOverlay"
            android:background="@color/transparent"
            tools:layout_editor_absoluteY="162dp"
            tools:layout_editor_absoluteX="16dp"
            android:visibility="gone">
        <Switch
                android:text="Extend to 15 rounds"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:textSize="16dp"
                android:textColor="@color/colorAccent"
                android:id="@+id/rounds"/>
        <Switch
                android:text="Music"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:textSize="16dp"
                android:textColor="@color/colorAccent"
                android:id="@+id/music"/>
        <Button
                android:text="@string/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:id="@+id/creditsButton"
                style="@android:style/Widget.DeviceDefault.Button.Colored"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textAllCaps="true"
                android:backgroundTint="@color/colorPrimary"
                android:textSize="16sp"/>

        <TextView
                android:text="@string/rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:id="@+id/rules"
                android:textSize="16dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textColor="@color/colorAccent"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>